--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -11,5 +11,10 @@ spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 
 spring.cloud.gateway.routes[0].id=test
 spring.cloud.gateway.routes[0].uri=lb://eureka-client
-spring.cloud.gateway.routes[0].predicates[]0=Path=/main/test
+spring.cloud.gateway.routes[0].predicates[0]=Path=/main/test
 spring.cloud.gateway.routes[0].predicates[1]=Method=GET
+
+spring.cloud.gateway.routes[1].id=user
+spring.cloud.gateway.routes[1].uri=lb://eureka-client-2
+spring.cloud.gateway.routes[1].predicates[0]=Path=/user/{name}
+spring.cloud.gateway.routes[1].predicates[1]=Method=GET
