--- a/eureka-client/src/main/resources/application.properties
+++ b/eureka-client/src/main/resources/application.properties
@@ -2,6 +2,6 @@ spring.application.name=eureka-client
 
 server.port=0
 
-eureka.client.service-url.defaultZone=http://localhost:8081/eureka
+eureka.client.service-url.defaultZone=http://localhost:****/eureka
 
 logging.pattern.console=%C{1.} [%-5level] %d{HH:mm:ss} - %msg%n
