--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=api-gateway
 
-server.port=****
+server.port=8765
 
-eureka.client.service-url.defaultZone=http://localhost:****/eureka
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
 logging.pattern.console=%C{1.} [%-5level] %d{HH:mm:ss} - %msg%n
 
